cmake_minimum_required(VERSION 3.1)
project(post-mortem)
add_definitions(-fno-rtti -fno-exceptions -fvisibility=hidden -fvisibility-inlines-hidden -Wall)
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--wrap=malloc")
add_library(post-mortem SHARED src/main.cpp)
add_executable(test-cpp tests/delete.cpp)
